--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
                             <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg>
-                        Mouthwash
+                        A million dollars
                     </h3>
-                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
-                    <p id="help">Mouthwash to clean your teeth after brushing and also to help take responsibility.</p>
+                    <img class="photo ftlLeft" src="images/money1.png" alt="">
+                    <p id="help">A million dollars to spend on everything I could ever want!</p>
+                    <p id="price">$1,000,000</p>
                     <a href="item1.html" class="lm">
                         Learn more
                     </a>
-                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                    <a target="_blank" href="https://secure.bankofamerica.com/login/sign-in/signOnV2Screen.go" class="bn">
                         Buy now
                     </a>
-                    <p id="cc">Mishaal Zahed on unsplash</p>
+                    <p id="cc">Barta4 on Pixabay</p>
                 </div>
             </div>
         </div>
@@ -41,17 +42,18 @@
                             <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg>
-                        Old timey computer.
+                        A gaming computer
                     </h3>
-                    <img class="photo ftlLeft" src="images/Ikea_Alien.png" alt="">
-                    <p id="help">A computer so I can press buttons on and on and on and on and on and on and on and on and on.</p>
-                    <a href="item1.html" class="lm">
+                    <img class="photo ftlLeft computer" src="images/computer1.png" alt="">
+                    <p id="help">A computer so I can play all the games I want with no trouble.</p>
+                    <p id="price">$1,249.99</p>
+                    <a href="item2.html" class="lm">
                         Learn more
                     </a>
-                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                    <a target="_blank" href="https://www.walmart.com/ip/CyberPowerPC-Gamer-Xtreme-Gaming-Desktop-Intel-Core-i5-14400F-16GB-Memory-NVIDIA-GeForce-RTX-4060-8GB-1TB-SSD-Black/5973465480?wmlspartner=imp_27795&selectedSellerId=3558&clickid=RMOSLpR8HxyKTVDVagUM%3Ay2UUkCXm9XRzSokwo0&irgwc=1&sourceid=imp_RMOSLpR8HxyKTVDVagUM%3Ay2UUkCXm9XRzSokwo0&veh=aff&affiliates_ad_id=612734&campaign_id=9383&sharedid=6080654" class="bn">
                         Buy now
                     </a>
-                    <p id="cc">Mishaal Zahed on unsplash</p>
+                    <p id="cc">Walmart images</p>
                 </div>
             </div>
         </div>
@@ -63,14 +65,15 @@
                             <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg>
-                        Passport
+                        Beetle
                     </h3>
-                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
-                    <p id="help">A passport so I can go and explore! I wonder is Impor is a good area to camp out in.</p>
-                    <a href="item1.html" class="lm">
+                    <img class="photo ftlLeft" src="images/beetle1.png" alt="">
+                    <p id="help">A cute little beetle to have as a pet. Beetles are awesome.</p>
+                    <p id="price">$199.99</p>
+                    <a href="item3.html" class="lm">
                         Learn more
                     </a>
-                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                    <a target="_blank" href="https://jamjamexotic.com/products/giant-stag-beetle-larvae?variant=42664842231970" class="bn">
                         Buy now
                     </a>
                     <p id="cc">Mishaal Zahed on unsplash</p>
@@ -87,11 +90,12 @@
                             <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg>
-                        Cross
+                        Mouthwashing
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
-                    <p id="help">A cross to keep myself safe. I hope this will safe the family that asked for my help.</p>
-                    <a href="item1.html" class="lm">
+                    <p id="help">A really good game. I'm too lazt to buy it myself.</p>
+                    <p id="price">$</p>
+                    <a href="item4.html" class="lm">
                         Learn more
                     </a>
                     <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
@@ -113,7 +117,8 @@
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
                     <p id="help">I could do alot of things with a canes cup. Drink, eat, toss, crush, destory, and more! Lets hope it doesn't come to life!</p>
-                    <a href="item1.html" class="lm"> 
+                    <p id="price">$</p>
+                    <a href="item5.html" class="lm"> 
                         Learn more
                     </a>
                     <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
@@ -135,7 +140,8 @@
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
                     <p id="help">Maybe with this badge no one will forget me. It's better then getting nothing!</p>
-                    <a href="item1.html" class="lm">
+                    <p id="price">$</p>
+                    <a href="item6.html" class="lm">
                         Learn more
                     </a>
                     <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
@@ -159,7 +165,8 @@
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
                     <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item1.html" class="lm">
+                    <p id="price">$</p>
+                    <a href="item7.html" class="lm">
                         Learn more
                     </a>
                     <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
@@ -181,7 +188,8 @@
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
                     <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item1.html" class="lm">
+                    <p id="price">$</p>
+                    <a href="item8.html" class="lm">
                         Learn more
                     </a>
                     <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
@@ -203,7 +211,8 @@
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
                     <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <a href="item1.html" class="lm">
+                    <p id="price">$</p>
+                    <a href="item9.html" class="lm">
                         Learn more
                     </a>
                     <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
