--- a/item1.html
+++ b/item1.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Mouthwash</title>
+    <title>A million dollars</title>
 </head>
 <body>
-    <p>Mouthwash is great when you want to freshen up your breath, and when you want to take responsibility for your actions. Altough all ship have it in there cargo, I would love a bottle of Dragonbreath mouthwash for myself, considering how it kills 99% of bacteria, however Dragonbreath is hard to find, so a blue bottle of Listerin will do the same job!</p>
-    <p>Mouthwash is pretty cheap, and easy to find in most stores like Walmart, Target, Costo, and Pricechopper. </p>
+    <p id="ff">Mouthwash is great when you want to freshen up your breath, and when you want to take responsibility for your actions. Altough all ship have it in there cargo, I would love a bottle of Dragonbreath mouthwash for myself, considering how it kills 99% of bacteria, however Dragonbreath is hard to find, so a blue bottle of Listerin will do the same job!</p>
+    <p id="ff">Mouthwash is pretty cheap, and easy to find in most stores like Walmart, Target, Costo, and Pricechopper. Mouthwash is considered a great hygienic item to own, so having a huge stock of it would be great, but I wouldn't want to drink it everyday.</p>
 <footer id="cc">
-    &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Reference; Mouthwashing (game) 
+    &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Image: pasja1000 on Pixabay
 </footer>
 </html>
