--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
                         Mouthwashing
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
-                    <p id="help">A really good game. I'm too lazt to buy it myself.</p>
-                    <p id="price">$</p>
+                    <p id="help">A really good game, but I am way too lazy to buy it myself.</p>
+                    <p id="price">$12.99</p>
                     <a href="item4.html" class="lm">
                         Learn more
                     </a>
-                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                    <a target="_blank" href="https://store.steampowered.com/app/2475490/Mouthwashing/" class="bn">
                         Buy now
                     </a>
                     <p id="cc">Mishaal Zahed on unsplash</p>
@@ -116,7 +116,7 @@
                         A single canes cup
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
-                    <p id="help">I could do alot of things with a canes cup. Drink, eat, toss, crush, destory, and more! Lets hope it doesn't come to life!</p>
+                    <p id="help">A single canes cup. Thats all I can say.</p>
                     <p id="price">$</p>
                     <a href="item5.html" class="lm"> 
                         Learn more
@@ -136,15 +136,15 @@
                             <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg>
-                        A participation badge
+                        Cat toys
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
-                    <p id="help">Maybe with this badge no one will forget me. It's better then getting nothing!</p>
-                    <p id="price">$</p>
+                    <p id="help">Toys so Flower can be happy and playful for the new year.</p>
+                    <p id="price">$5.99</p>
                     <a href="item6.html" class="lm">
                         Learn more
                     </a>
-                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                    <a target="_blank" href="https://www.cleanrun.com/product/play_n_squeak_mouse/index.cfm?srsltid=AfmBOoo9KO8K5oFnqJaX6BgyG535N-67cDLNxVOQca1JU73frsNqq5HD" class="bn">
                         Buy now
                     </a>
                     <p id="cc">Mishaal Zahed on unsplash</p>
