--- a/item1.html
+++ b/item1.html
@@ -9,8 +9,10 @@
     <title>A million dollars</title>
 </head>
 <body>
-    <p id="ff">Mouthwash is great when you want to freshen up your breath, and when you want to take responsibility for your actions. Altough all ship have it in there cargo, I would love a bottle of Dragonbreath mouthwash for myself, considering how it kills 99% of bacteria, however Dragonbreath is hard to find, so a blue bottle of Listerin will do the same job!</p>
-    <p id="ff">Mouthwash is pretty cheap, and easy to find in most stores like Walmart, Target, Costo, and Pricechopper. Mouthwash is considered a great hygienic item to own, so having a huge stock of it would be great, but I wouldn't want to drink it everyday.</p>
+    <div>
+        <p id="ff">Mouthwash is great when you want to freshen up your breath, and when you want to take responsibility for your actions. Altough all ship have it in there cargo, I would love a bottle of Dragonbreath mouthwash for myself, considering how it kills 99% of bacteria, however Dragonbreath is hard to find, so a blue bottle of Listerin will do the same job!</p>
+        <p id="ff">Mouthwash is pretty cheap, and easy to find in most stores like Walmart, Target, Costo, and Pricechopper. Mouthwash is considered a great hygienic item to own, so having a huge stock of it would be great, but I wouldn't want to drink it everyday.</p>
+    </div>
 <footer id="cc">
     &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Image: pasja1000 on Pixabay
 </footer>
