--- a/secret.html
+++ b/secret.html
@@ -1,42 +1,37 @@
-<p>Mr wells if you SOMEHOW see this, this just a testing page and stuff, um its really just for me. If you do see this then ig I forgot to delete it :embarrassed:</p>
-
-<link rel="stylesheet" href="css/styles.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
-
-<div class="row">
-    <div class="container col-3">
-        <div class="card">
-            <div class="content">
-                <h3>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
-                        <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
-                        <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
-                    </svg>
-                    Mouthwash
-                </h3>
-                
-                <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
-                <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                <a href="item1.html" class="lm">
-                    Learn more
-                </a>
-                <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
-                    Buy now
-                </a>
-                <p id="cc">Mishaal Zahed on unsplash</p>
-            </div>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <title>A million dollars</title>
+<!-- Navigation -->
+<nav class="navbar navbar-expand">
+    <div class="container-fluid">
+        <!-- Links -->
+        <a class="navbar-brand" href="#">logo</a>
+        <ul class="navbar-nav">
+            <button class="navbtn">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+            </button>
+            <button class="navbtn">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Santa tracker</a>
+                </li>
+            </button>
+        </ul>
     </div>
-</div>
-
-<p>make it so the damn image and text are buddys >:/</p>
-
-<p class="bi bi-basket2">hi</p>
-
-<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-basket2" viewBox="0 0 16 16">
-    <path d="M4 10a1 1 0 0 1 2 0v2a1 1 0 0 1-2 0zm3 0a1 1 0 0 1 2 0v2a1 1 0 0 1-2 0zm3 0a1 1 0 1 1 2 0v2a1 1 0 0 1-2 0z"></path>
-    <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-.623l-1.844 6.456a.75.75 0 0 1-.722.544H3.69a.75.75 0 0 1-.722-.544L1.123 8H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM2.163 8l1.714 6h8.246l1.714-6z"></path>
-</svg>
+</nav>
+</head>
+<body class="backback">
+    <p id="ff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum vel cum nihil eaque iste, neque dolor velit itaque accusamus vitae odio. Nam optio voluptatum possimus? Maxime nam deserunt dolorem accusamus.</p>
+    <p id="ff">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, eaque beatae modi enim quibusdam quisquam corporis expedita iure ut deleniti odio quos impedit est ex voluptatem molestias, aperiam voluptatibus mollitia.</p>
+</body>
+<footer id="cc">
+    &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Image: 
+</footer>
+</html>
