--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <a target="_blank" href="https://jamjamexotic.com/products/giant-stag-beetle-larvae?variant=42664842231970" class="bn">
                         Buy now
                     </a>
-                    <p id="cc">Mishaal Zahed on unsplash</p>
+                    <p id="cc">Bergadder on Pixabay</p>
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
                         </svg>
                         Mouthwashing
                     </h3>
-                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <img class="photo ftlLeft" src="images/mouthwashing1.png" alt="">
                     <p id="help">A really good game, but I am way too lazy to buy it myself.</p>
                     <p id="price">$12.99</p>
                     <a href="item4.html" class="lm">
@@ -101,7 +101,7 @@
                     <a target="_blank" href="https://store.steampowered.com/app/2475490/Mouthwashing/" class="bn">
                         Buy now
                     </a>
-                    <p id="cc">Mishaal Zahed on unsplash</p>
+                    <p id="cc">Steam photos</p>
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
                         </svg>
                         A single canes cup
                     </h3>
-                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <img class="photo ftlLeft" src="images/canes1.png" alt="">
                     <p id="help">A single canes cup. Thats all I can say.</p>
                     <p id="price">$</p>
                     <a href="item5.html" class="lm"> 
