--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         A single canes cup
                     </h3>
                     <img class="photo ftlLeft" src="images/canes1.png" alt="">
-                    <p id="help">A single canes cup. Thats all I can say.</p>
+                    <p id="help">A single empty canes cup. Thats all I can really say about this.</p>
                     <p id="price">$</p>
                     <a href="item5.html" class="lm"> 
                         Learn more
@@ -161,11 +161,11 @@
                             <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg>
-                        Coin
+                        A pigeon 
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
-                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <p id="price">$</p>
+                    <p id="help">Some funny bird, and it's free if you grab it from the streets.</p>
+                    <p id="price">$5.99</p>
                     <a href="item7.html" class="lm">
                         Learn more
                     </a>
@@ -184,11 +184,11 @@
                             <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg>
-                        Mouthwash
+                        Kainan's brain
                     </h3>
                     <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
-                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <p id="price">$</p>
+                    <p id="help">Kainan's brain so I can see whats going on in his head.</p>
+                    <p id="price">$2</p>
                     <a href="item8.html" class="lm">
                         Learn more
                     </a>
