--- a/secret.html
+++ b/secret.html
@@ -7,27 +7,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>A million dollars</title>
-<!-- Navigation -->
-<nav class="navbar navbar-expand">
-    <div class="container-fluid">
-        <!-- Links -->
-        <a class="navbar-brand" href="#">logo</a>
-        <ul class="navbar-nav">
-            <button class="navbtn">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-            </button>
-            <button class="navbtn">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Santa tracker</a>
-                </li>
-            </button>
-        </ul>
-    </div>
-</nav>
 </head>
 <body class="backback">
+    <nav class="navbar navbar-expand fixed-top">
+        <div class="container-fluid">
+            <!-- Links -->
+            <a class="navbar-brand" href="#">
+                <img alt="Beetle 1" src="images/beetle1.png">
+            </a>
+            <ul class="navbar-nav">
+                <button class="navbtn">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                </button>
+                <button class="navbtn">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://santatracker.google.com">Santa tracker</a>
+                    </li>
+                </button>
+            </ul>
+        </div>
+    </nav>
     <p id="ff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum vel cum nihil eaque iste, neque dolor velit itaque accusamus vitae odio. Nam optio voluptatum possimus? Maxime nam deserunt dolorem accusamus.</p>
     <p id="ff">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, eaque beatae modi enim quibusdam quisquam corporis expedita iure ut deleniti odio quos impedit est ex voluptatem molestias, aperiam voluptatibus mollitia.</p>
     <br>
