--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Christmas list</title>
-    <link rel="lego" href="images/hi.png">
+    <link rel="lego" href="images/icon.png">
 </head>
 <body>
+    <nav class="navbar navbar-expand fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img class="icon" alt="icon" src="images/icon.png">
+            </a>
+            <ul class="navbar-nav">
+                <button class="navbtn">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                </button>
+                <button class="navbtn">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://santatracker.google.com/">Santa tracker</a>
+                    </li>
+                </button>
+            </ul>
+        </div>
+    </nav>
+    <div class="emo"></div>
     <div class="row">
         <div class="container col-3">
             <div class="card">
@@ -117,14 +137,14 @@
                     </h3>
                     <img class="photo ftlLeft" src="images/canes1.png" alt="">
                     <p id="help">A single empty canes cup. Thats all I can really say about this.</p>
-                    <p id="price">$</p>
+                    <p id="price">$2.99</p>
                     <a href="item5.html" class="lm"> 
                         Learn more
                     </a>
-                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                    <a target="_blank" href="https://www.raisingcanes.com/menu/drinks/" class="bn">
                         Buy now
                     </a>
-                    <p id="cc">Mishaal Zahed on unsplash</p>
+                    <p id="cc">Canes website</p>
                 </div>
             </div>
         </div>
@@ -138,7 +158,7 @@
                         </svg>
                         Cat toys
                     </h3>
-                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <img class="photo ftlLeft" src="images/cattoy1.png" alt="">
                     <p id="help">Toys so Flower can be happy and playful for the new year.</p>
                     <p id="price">$5.99</p>
                     <a href="item6.html" class="lm">
@@ -147,7 +167,7 @@
                     <a target="_blank" href="https://www.cleanrun.com/product/play_n_squeak_mouse/index.cfm?srsltid=AfmBOoo9KO8K5oFnqJaX6BgyG535N-67cDLNxVOQca1JU73frsNqq5HD" class="bn">
                         Buy now
                     </a>
-                    <p id="cc">Mishaal Zahed on unsplash</p>
+                    <p id="cc">viarip on Pixabay</p>
                 </div>
             </div>
         </div>
@@ -163,16 +183,16 @@
                         </svg>
                         A pigeon 
                     </h3>
-                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <img class="photo ftlLeft" src="images/pidgon1.png" alt="">
                     <p id="help">Some funny bird, and it's free if you grab it from the streets.</p>
-                    <p id="price">$5.99</p>
+                    <p id="price">$0</p>
                     <a href="item7.html" class="lm">
                         Learn more
                     </a>
-                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                    <a target="_blank" href="https://www.google.com/maps/place/Pigeon+Paradise/@40.748927,-73.8970138,18.86z/data=!4m14!1m7!3m6!1s0x89c25fa993b3bd97:0xc1b1306fd8e74d81!2sPigeon+Paradise!8m2!3d40.7486494!4d-73.8965168!16s%2Fg%2F11f66qlgmp!3m5!1s0x89c25fa993b3bd97:0xc1b1306fd8e74d81!8m2!3d40.7486494!4d-73.8965168!16s%2Fg%2F11f66qlgmp?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" class="bn">
                         Buy now
                     </a>
-                    <p id="cc">Mishaal Zahed on unsplash</p>
+                    <p id="cc">Johnny_Harvester on Pixabay</p>
                 </div>
             </div>
         </div>
@@ -207,18 +227,18 @@
                             <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg>
-                        Mouthwash
+                        Car dice
                     </h3>
-                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
-                    <p id="help">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eligendi molestias repellendus, tenetur Doloremque amet quibusdam minima tempora?</p>
-                    <p id="price">$</p>
+                    <img class="photo ftlLeft" src="images/dice1.png" alt="">
+                    <p id="help">Fluffy car dice so my car can feel more fun. That is when I get a car.</p>
+                    <p id="price">$8.49</p>
                     <a href="item9.html" class="lm">
                         Learn more
                     </a>
-                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                    <a target="_blank" href="https://www.walmart.com/ip/NOGIS-Fuzzy-Plush-Dice-for-Car-Mirror-Pair-of-Retro-3-Pink-Dice-with-White-Dots-for-Car-Interior-Hanging-Ornament-Decoration/3023178330?wmlspartner=imp_27795&selectedSellerId=15304&clickid=RMOSLpR8HxyKTVDVagUM%3Ay2UUkCXoyzVzSokwo0&irgwc=1&sourceid=imp_RMOSLpR8HxyKTVDVagUM%3Ay2UUkCXoyzVzSokwo0&veh=aff&affiliates_ad_id=612734&campaign_id=9383&sharedid=6080654" class="bn">
                         Buy now
                     </a>
-                    <p id="cc">Mishaal Zahed on unsplash</p>
+                    <p id="cc">Logitech4 on Pixabay</p>
                 </div>
             </div>
         </div>
