--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
             </ul>
         </div>
     </nav>
-    <div class="emo"></div>
-    <div class="row">
-        <div class="container col-3">
+    <br>
+    <div class="hero">
+        <img id="hero" src="images/header.png">
+    </div>
+        <div class="container">
             <div class="card">
                 <div class="content">
                     <h3>
@@ -53,8 +55,6 @@
                     <p id="cc">Barta4 on Pixabay</p>
                 </div>
             </div>
-        </div>
-        <div class="container col-3">
             <div class="card">
                 <div class="content">
                     <h3>
@@ -76,8 +76,6 @@
                     <p id="cc">Walmart images</p>
                 </div>
             </div>
-        </div>
-        <div class="container col-3">
             <div class="card">
                 <div class="content">
                     <h3>
@@ -99,10 +97,6 @@
                     <p id="cc">Bergadder on Pixabay</p>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="container col-3">
             <div class="card">
                 <div class="content">
                     <h3>
@@ -124,8 +118,6 @@
                     <p id="cc">Steam photos</p>
                 </div>
             </div>
-        </div>
-        <div class="container col-3">
             <div class="card">
                 <div class="content">
                     <h3>
@@ -147,8 +139,6 @@
                     <p id="cc">Canes website</p>
                 </div>
             </div>
-        </div>
-        <div class="container col-3">
             <div class="card">
                 <div class="content">
                     <h3>
@@ -170,10 +160,6 @@
                     <p id="cc">viarip on Pixabay</p>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="container col-3">
             <div class="card">
                 <div class="content">
                     <h3>
@@ -195,8 +181,6 @@
                     <p id="cc">Johnny_Harvester on Pixabay</p>
                 </div>
             </div>
-        </div>
-        <div class="container col-3">
             <div class="card">
                 <div class="content">
                     <h3>
@@ -206,20 +190,18 @@
                         </svg>
                         Kainan's brain
                     </h3>
-                    <img class="photo ftlLeft" src="images/Mouthwash.png" alt="">
+                    <img class="photo ftlLeft" src="images/brain1.png" alt="">
                     <p id="help">Kainan's brain so I can see whats going on in his head.</p>
                     <p id="price">$2</p>
                     <a href="item8.html" class="lm">
                         Learn more
                     </a>
-                    <a target="_blank" href="https://www.walmart.com/ip/Listerine-Cool-Mint-Antiseptic-Mouthwash-Mouth-Rinse-for-Bad-Breath-Plaque-1-5-L/871623?classType=VARIANT&athbdg=L1102" class="bn">
+                    <a target="_blank" href="https://www.gene.com/stories/how-to-get-into-the-brain" class="bn">
                         Buy now
                     </a>
-                    <p id="cc">Mishaal Zahed on unsplash</p>
+                    <p id="cc">Mishaal Zahed on Pixabay</p>
                 </div>
             </div>
-        </div>
-        <div class="container col-3">
             <div class="card">
                 <div class="content">
                     <h3>
@@ -241,8 +223,7 @@
                     <p id="cc">Logitech4 on Pixabay</p>
                 </div>
             </div>
-        </div>
-    </div>
+</div>
 </body>
 <footer id="cc">
     &copy; 2024 Berry Gavigan. This web project was created for educational purposes.
