--- a/secret.html
+++ b/secret.html
@@ -8,65 +8,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>A million dollars</title>
 </head>
+<div class="hero">
+    <img id="hero" src="images/header.png">
+</div>
 <body class="backback">
     <p id="ff">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum vel cum nihil eaque iste, neque dolor velit itaque accusamus vitae odio. Nam optio voluptatum possimus? Maxime nam deserunt dolorem accusamus.</p>
     <p id="ff">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, eaque beatae modi enim quibusdam quisquam corporis expedita iure ut deleniti odio quos impedit est ex voluptatem molestias, aperiam voluptatibus mollitia.</p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 </body>
 <footer id="cc">
     &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Image: 
