--- a/item1.html
+++ b/item1.html
@@ -8,12 +8,36 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>A million dollars</title>
 </head>
-<body>
-    <div>
-        <p id="ff">Mouthwash is great when you want to freshen up your breath, and when you want to take responsibility for your actions. Altough all ship have it in there cargo, I would love a bottle of Dragonbreath mouthwash for myself, considering how it kills 99% of bacteria, however Dragonbreath is hard to find, so a blue bottle of Listerin will do the same job!</p>
-        <p id="ff">Mouthwash is pretty cheap, and easy to find in most stores like Walmart, Target, Costo, and Pricechopper. Mouthwash is considered a great hygienic item to own, so having a huge stock of it would be great, but I wouldn't want to drink it everyday.</p>
+<nav class="navbar navbar-expand fixed-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img class="icon" alt="icon" src="images/icon.png">
+        </a>
+        <ul class="navbar-nav">
+            <button class="navbtn">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+            </button>
+            <button class="navbtn">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://santatracker.google.com/">Santa tracker</a>
+                </li>
+            </button>
+        </ul>
     </div>
+</nav>
+<div class="hero">
+    <img id="hero" class="helpme" src="images/money2.png">
+</div>
+<body class="backback">
+        <p id="ff">A million dollars is alot of money, but I can be really good with money, so I don't see it as that big of a deal for me to have all this money in my hands.</p>
+        <p id="ff">With all of this money I could buy everything I want on this list and more so I would say that it's worth it. It would also be nice to be able to help my family out, especially in times like this.</p>
+    <a href="index.html" class="pd">
+        Back
+    </a>
+</body>
 <footer id="cc">
-    &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Image: pasja1000 on Pixabay
+    &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Image: Engin Akyurt on Pexels
 </footer>
 </html>
