--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                             <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
                             <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
                         </svg>
-                        A single canes cup
+                        A single Cane's cup
                     </h3>
                     <img class="photo ftlLeft" src="images/canes1.png" alt="">
-                    <p id="help">A single empty canes cup. Thats all I can really say about this.</p>
+                    <p id="help">A single empty Cane's cup. Thats all I can really say about this.</p>
                     <p id="price">$2.99</p>
                     <a href="item5.html" class="lm"> 
                         Learn more
@@ -136,7 +136,7 @@
                     <a target="_blank" href="https://www.raisingcanes.com/menu/drinks/" class="bn">
                         Buy now
                     </a>
-                    <p id="cc">Canes website</p>
+                    <p id="cc">Cane's website</p>
                 </div>
             </div>
             <div class="card">
