--- a/item3.html
+++ b/item3.html
@@ -3,12 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Beetle</title>
 </head>
-<body>
-    
+<nav class="navbar navbar-expand fixed-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img class="icon" alt="icon" src="images/icon.png">
+        </a>
+        <ul class="navbar-nav">
+            <button class="navbtn">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+            </button>
+            <button class="navbtn">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://santatracker.google.com/">Santa tracker</a>
+                </li>
+            </button>
+        </ul>
+    </div>
+</nav>
+<div class="hero">
+    <img id="hero" class="helpme" src="images/beetle2.png">
+</div>
+<body class="backback">
+        <p id="ff">I personally think beetles are awesome, and would really like to have one to watch as I go about my daily business. I also think Beatles deserve more love as the mainly aren't creatures that harm humans.</p>
+        <p id="ff"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bug-fill" viewBox="0 0 16 16">
+            <path d="M4.978.855a.5.5 0 1 0-.956.29l.41 1.352A5 5 0 0 0 3 6h10a5 5 0 0 0-1.432-3.503l.41-1.352a.5.5 0 1 0-.956-.29l-.291.956A5 5 0 0 0 8 1a5 5 0 0 0-2.731.811l-.29-.956z"/>
+            <path d="M13 6v1H8.5v8.975A5 5 0 0 0 13 11h.5a.5.5 0 0 1 .5.5v.5a.5.5 0 1 0 1 0v-.5a1.5 1.5 0 0 0-1.5-1.5H13V9h1.5a.5.5 0 0 0 0-1H13V7h.5A1.5 1.5 0 0 0 15 5.5V5a.5.5 0 0 0-1 0v.5a.5.5 0 0 1-.5.5zm-5.5 9.975V7H3V6h-.5a.5.5 0 0 1-.5-.5V5a.5.5 0 0 0-1 0v.5A1.5 1.5 0 0 0 2.5 7H3v1H1.5a.5.5 0 0 0 0 1H3v1h-.5A1.5 1.5 0 0 0 1 11.5v.5a.5.5 0 1 0 1 0v-.5a.5.5 0 0 1 .5-.5H3a5 5 0 0 0 4.5 4.975"/>
+          </svg></p>
+    <a href="index.html" class="pd">
+        Back
+    </a>
 </body>
-<footer>
-    
+<footer id="cc">
+    &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Image: LubosHouska on Pixabay
 </footer>
 </html>
