--- a/item4.html
+++ b/item4.html
@@ -3,12 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Mouthwashing</title>
 </head>
-<body>
-    
+<nav class="navbar navbar-expand fixed-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img class="icon" alt="icon" src="images/icon.png">
+        </a>
+        <ul class="navbar-nav">
+            <button class="navbtn">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+            </button>
+            <button class="navbtn">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://santatracker.google.com/">Santa tracker</a>
+                </li>
+            </button>
+        </ul>
+    </div>
+</nav>
+<div class="hero">
+    <img id="hero" class="helpme" src="images/mouthwashing2.png">
+</div>
+<body class="backback">
+        <p id="ff">Mouthwashing is a very interesting game, and I really enjoy what I have seen about the game so far. I really think this is a type of game I would really enjoy. </p>
+        <p id="ff">If I could get Mouthwashing, I think it would be a good use of my time and the hours it takes to finish the game completely. </p>
+    <a href="index.html" class="pd">
+        Back
+    </a>
 </body>
-<footer>
-    
+<footer id="cc">
+    &copy; 2024 Berry Gavigan. This web project was created for educational purposes. Image: Screenshot from Mouthwashing
 </footer>
 </html>
